image bg white flicker fix

--- a/WEBPAGES/Year2Page/CSS/Year2Page.css
+++ b/WEBPAGES/Year2Page/CSS/Year2Page.css
@@ -122,7 +122,6 @@ h1{
     margin: 25px 25px 0px 25px ;
     width:250px;
     height:200px;
-    background-color: aliceblue;
     overflow: hidden;
     cursor: pointer;
 }
